# aws-ofi-nccl

./: BUGS_FOUND.md  GTEST_INTEGRATION.md  configure.ac  configure~
include/: nccl_ofi_freelist.h
src/: nccl_ofi_freelist.cpp  nccl_ofi_mr.cpp  nccl_ofi_net.cpp  nccl_ofi_rdma.cpp  nccl_ofi_sendrecv.cpp  nccl_ofi_topo.cpp
src/cm/: nccl_ofi_cm.cpp
src/gin/: nccl_ofi_gin.cpp
tests/unit/: .gitignore  GTEST_README.md  Makefile.am  core.libfabric_mock_.103387  core.libfabric_mock_.103572  ep_addr_list_test.cpp  freelist_test.cpp  histogram_gtest.cpp  idpool_test.cpp  libfabric_mock.cpp  libfabric_mock_test  mr_cache_test.cpp  msgbuff_test.cpp  nccl_ofi_math_test.cpp  param_test.cpp  pthread_wrapper_test.cpp  scheduler_test.cpp
